--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -5,3 +5,4 @@
 @use 'main_components/section3';
 @use 'main_components/section4';
 @use 'main_components/section5';
+@use 'main_components/asistencia';
