creating table by call database

--- a/src/style/sass/main_components/asistencia.scss
+++ b/src/style/sass/main_components/asistencia.scss
@@ -1,6 +1,7 @@
 @use "variables.scss" as *;
 
 .asistencia_body{
+    color: $text-color;
     font-family: $work-sans;
     display: grid;
     height: 100vh;
