--- a/src/style/sass/main_components/section3.scss
+++ b/src/style/sass/main_components/section3.scss
@@ -156,23 +156,23 @@
             animation: leaves_sct3 9s alternate infinite ease-in;
             transform-origin: right bottom;
         }
-        // .sctn-2_flwr4{
-        //     width: 35%;
-        //     // top: 100%;
-        //     left: 1.5%;
-        //     bottom: 55%;
-        //     animation: leaves_sct4 7s alternate infinite ease-in;
-        //     transform-origin: center top;
-        // }
+        .sctn-2_flwr4{
+            width: 30%;
+            // top: 100%;
+            left: 1.5%;
+            bottom: 60%;
+            animation: leaves_sct4 7s alternate infinite ease-in;
+            transform-origin: center;
+        }
         .sctn-2_flwr5{
             position: absolute;
-            transform: rotate(180deg);
+            // transform: rotate(180deg);
             width: 35%;
             // top: 100%;
-            right: 18.5%;
+            right: 19.5%;
             top: -7%;
-            animation: leaves_sct3_alt 8s alternate infinite ease-in;
-            transform-origin: center;
+            animation: leaves_sct3 11s alternate infinite ease-in;
+            transform-origin: center bottom;
         }
         .sctn-2_flwr6{
             width: 8%;
