dress icon changed

--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -533,7 +533,7 @@ li {
   fill: #202020;
 }
 .sctn3 .content_sect3 .dresscode {
-  margin-top: 2rem;
+  margin-bottom: 2.125rem;
   width: 100%;
   padding: 0.5rem 1rem;
   background-color: #f3adb9;
