--- a/src/style/sass/main_components/section3.scss
+++ b/src/style/sass/main_components/section3.scss
@@ -24,7 +24,7 @@
         }
 
         .dresscode{
-            margin-top: 2rem;
+            margin-bottom: 2.125rem;
             width: 100%;
             padding: .5rem 1rem;
             background-color: #f3adb9;
