--- a/src/style/sass/main_components/section3.scss
+++ b/src/style/sass/main_components/section3.scss
@@ -115,7 +115,7 @@
         // display:inline-block;
         width: 45%;
         bottom: 0%;
-        right: 0;
+        right: -3%;
         z-index: 100;
         animation: hole_flowers 35s alternate infinite ease-in;
         transform-origin: center bottom;
