--- a/src/style/sass/main_components/section3.scss
+++ b/src/style/sass/main_components/section3.scss
@@ -179,7 +179,8 @@
         // display:inline-block;
         width: 25%;
         left: 1rem;
-        top: 1rem;
+        top: -5%;
+        transform: rotateY(180deg);
         // margin: auto;
     }
 
