--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -680,6 +680,7 @@ li {
   left: 1rem;
   top: -5%;
   transform: rotateY(180deg);
+  z-index: 100;
 }
 .sctn3 .sctn-3_flowers {
   transform: rotateY(-180deg);
@@ -765,6 +766,7 @@ li {
   gap: 2.75rem 1.5rem;
   place-items: center;
   opacity: 0;
+  z-index: 50;
 }
 .sctn4 .form .message {
   font-size: 1.5rem;
@@ -1004,7 +1006,7 @@ li {
   transform-origin: bottom right;
 }
 .sctn4 .sctn-2_flowers {
-  z-index: 10;
+  z-index: 100;
   width: 41.5%;
   bottom: 0;
   right: -4%;
@@ -1061,6 +1063,7 @@ li {
   transform-origin: left top;
 }
 .sctn4 .up_flower {
+  z-index: 100;
   width: 90%;
   position: absolute;
   top: 3%;
@@ -1087,6 +1090,32 @@ li {
   width: 40%;
   right: 15%;
   top: 2%;
+}
+.sctn4 .veryPink {
+  position: absolute;
+  right: -40%;
+  bottom: -2%;
+  opacity: 0.9;
+}
+.sctn4 .veryPink2 {
+  position: absolute;
+  left: -30%;
+  bottom: 2%;
+  opacity: 0.9;
+}
+.sctn4 .veryPink3 {
+  width: 65%;
+  z-index: 1;
+  position: absolute;
+  left: -20%;
+  top: 2%;
+  opacity: 0.9;
+}
+.sctn4 .veryPink4 {
+  z-index: 1;
+  position: absolute;
+  right: -20%;
+  top: -2%;
 }
 
 @keyframes leaves_sct4 {
