--- a/src/style/sass/main_components/section4.scss
+++ b/src/style/sass/main_components/section4.scss
@@ -16,6 +16,7 @@
         gap: 2.75rem  1.5rem;
         place-items: center; //////////////
         opacity: 0;
+        z-index: 50;
 
         .message{
             font-size: 1.5rem;
@@ -322,7 +323,7 @@
     }
     
     .sctn-2_flowers{
-        z-index: 10;
+        z-index: 100;
         width: 41.5%;
         bottom: 0;
         right: -4%;
@@ -387,6 +388,7 @@
         }
     }
     .up_flower{
+        z-index: 100;
         width: 90%;
         // display: inline-block;
         position: absolute;
@@ -422,6 +424,35 @@
             right: 15%;
             top: 2%;
         }
+    }
+
+    .veryPink{
+        position: absolute;
+        right: -40%;
+        bottom: -2%;
+        opacity: .9;
+    }
+    .veryPink2{
+        position: absolute;
+        left: -30%;
+        bottom: 2%;
+        opacity: .9;
+    }
+    .veryPink3{
+        width: 65%;
+        z-index:1;
+        position: absolute;
+        left: -20%;
+        top: 2%;
+        opacity: .9;
+    }
+    .veryPink4{
+        // width: 65%;
+        z-index:1;
+        position: absolute;
+        right: -20%;
+        top: -2%;
+        // opacity: .9;
     }
 }
 
