--- a/src/style/sass/main_components/section4.scss
+++ b/src/style/sass/main_components/section4.scss
@@ -427,18 +427,21 @@
     }
 
     .veryPink{
+        opacity: 0;
         position: absolute;
         right: -40%;
         bottom: -2%;
         opacity: .9;
     }
     .veryPink2{
+        opacity: 0;
         position: absolute;
         left: -30%;
         bottom: 2%;
         opacity: .9;
     }
     .veryPink3{
+        opacity: 0;
         width: 65%;
         z-index:1;
         position: absolute;
@@ -447,6 +450,7 @@
         opacity: .9;
     }
     .veryPink4{
+        opacity: 0;
         // width: 65%;
         z-index:1;
         position: absolute;
