--- a/src/style/sass/main_components/section3.scss
+++ b/src/style/sass/main_components/section3.scss
@@ -2,11 +2,11 @@
 
 .sctn3{
     margin-top: -3rem;
-    .bottom-sctn-3{
-        position: absolute;
-        width: 130%;
-        top: 0;
-    }
+    // .bottom-sctn-3{
+    //     position: absolute;
+    //     // width: 130%;
+    //     top: 0;
+    // }
 
     
     .content_sect3{
@@ -14,7 +14,7 @@
         display: grid;
         place-items: center;
         width: 80%;
-        padding: 3.5rem 1rem;
+        padding: 4.5rem 1rem;
         opacity: 0;
 
         .dress_icon{
