--- a/src/style/sass/main_components/section4.scss
+++ b/src/style/sass/main_components/section4.scss
@@ -14,7 +14,7 @@
         grid-auto-flow: row;
         padding: 4.5rem 1rem;
         gap: 2.75rem  1.5rem;
-        place-items: center; //////////////
+        place-items: center; 
         opacity: 0;
         z-index: 50;
 
