--- a/src/style/sass/main_components/section3.scss
+++ b/src/style/sass/main_components/section3.scss
@@ -2,95 +2,141 @@
 
 .sctn3{
     margin-top: -3rem;
+    // display: grid;
+    height: min-content;
+    
     // .bottom-sctn-3{
     //     position: absolute;
     //     // width: 130%;
     //     top: 0;
     // }
-
-    
-    .content_sect3{
-        background-color: white;
+    .sc3{
         display: grid;
         place-items: center;
-        width: 80%;
-        padding: 4.5rem 1rem;
-        opacity: 0;
+        gap: 1.75rem;
+        // margin-top: -5rem;
 
-        .dress_icon{
-            max-width: 20%;
-            fill: #202020;
-
-        }
-
-        .dresscode{
-            margin-bottom: 2.125rem;
-            width: 100%;
-            padding: .5rem 1rem;
-            background-color: #f3adb9;
-            // background-color: #af415375;
-            font-weight: 300;
-            text-align: center;
-            font-size: 1.5rem;
-        }
-
-        .half{
+        .content_sect3{
+            background-color: white;
             display: grid;
-            grid-auto-flow: column;
-            width: 100%;
-            margin-top: 2rem;
-
-
-            .line__container{
-                display: grid;
-                place-items: center;
-
-
-                .line{
-                    display: block;
-                    width: 1px;
-                    height:calc(100% + .10rem);
-                    background-color: #202020;
-                    transform: translate(6px, -5px);
-                }
+            // height: min-content;
+            place-items: center;
+            width: 80%;
+            padding: 2rem 1rem;
+            opacity: 0;
+    
+            .dress_icon{
+                max-width: 20%;
+                fill: #202020;
+    
             }
-
-            .men, .women{
-                font-family: $work-sans;
-                ul{
-                    padding: 0;
+    
+            .dresscode{
+                margin-bottom: 2.125rem;
+                width: 100%;
+                padding: .5rem 1rem;
+                background-color: #f3adb9;
+                // background-color: #af415375;
+                font-weight: 300;
+                text-align: center;
+                font-size: 1.5rem;
+            }
+    
+            .half{
+                display: grid;
+                grid-auto-flow: column;
+                width: 100%;
+                margin-top: 2rem;
+    
+    
+                .line__container{
                     display: grid;
                     place-items: center;
-                    text-transform: capitalize;
-                    h3{
-                        margin-bottom: .75rem;
-                        color: #202020;
-                        font-size: 1.5rem;
+    
+    
+                    .line{
+                        display: block;
+                        width: 1px;
+                        height:calc(100% + .10rem);
+                        background-color: #202020;
+                        transform: translate(6px, -5px);
                     }
                 }
-                li{
-                    text-align: center;
-                    font-size: 1.25rem;
-                    font-weight: 300;
+    
+                .men, .women{
+                    font-family: $work-sans;
+                    ul{
+                        padding: 0;
+                        display: grid;
+                        place-items: center;
+                        text-transform: capitalize;
+                        h3{
+                            margin-bottom: .75rem;
+                            color: #202020;
+                            font-size: 1.5rem;
+                        }
+                    }
+                    li{
+                        text-align: center;
+                        font-size: 1.25rem;
+                        font-weight: 300;
+                    }
+                }
+    
+            }
+            h3{
+                font-family: $work-sans;
+                font-weight: 400;
+                font-size: 1.25rem;
+                &::first-letter{
+                    text-transform: uppercase;
                 }
             }
-
-        }
-        h3{
-            font-family: $work-sans;
-            font-weight: 400;
-            font-size: 1.25rem;
-            &::first-letter{
-                text-transform: uppercase;
+            .reserva_color{
+                margin-top: 2rem;
             }
+            
+            
+            
         }
-        .reserva_color{
-            margin-top: 2rem;
+    
+        .lluviaSobres{
+            color: $text-color;
+            font-family: $work-sans;
+            z-index: 100;
+            background-color: white;
+            text-align: center;
+            // display: grid;
+            // height: min-content;
+            place-items: center;
+            width: 80%;
+            padding: 2rem 1rem;
+            // opacity: 0;
+            .envelope{
+                fill: $text-color;
+                width: 2.75rem;
+                padding: .5rem 0 .5rem;
+            }
+
+            .lluviaTitle{
+
+                margin-bottom: .75rem;
+                font-weight: 400;
+                font-size: 1.5rem;
+            }
+            .lluviaText{
+                text-align: center;
+                font-weight: 300;
+                font-size: 1.125rem;
+
+                .numaccount{
+                    font-weight: 400;
+                }
+            }
+    
         }
-        
-        
-        
     }
+    
     .wtrclr-on-sctn-3, .wtrclr-on-sctn-3_1, .flwr_sctn-3-1{
         position: absolute;
     }
