--- a/src/style/sass/main_components/section3.scss
+++ b/src/style/sass/main_components/section3.scss
@@ -111,7 +111,7 @@
             place-items: center;
             width: 80%;
             padding: 2rem 1rem;
-            // opacity: 0;
+            opacity: 0;
             .envelope{
                 fill: $text-color;
                 width: 2.75rem;
