--- a/src/style/sass/main_components/section3.scss
+++ b/src/style/sass/main_components/section3.scss
@@ -160,11 +160,12 @@
         position: absolute;
         // display:inline-block;
         width: 45%;
-        bottom: 0%;
-        right: -3%;
-        z-index: 100;
-        animation: hole_flowers 35s alternate infinite ease-in;
-        transform-origin: center bottom;
+        bottom: 25%;
+        right: -15%;
+        z-index: 120;
+        transform: rotateZ(-22deg);
+        // animation: hole_flowers 35s alternate infinite ease-in;
+        // transform-origin: center bottom;
         // margin: auto;
         .rootplant{
             position: absolute;
@@ -223,7 +224,7 @@
         position: absolute;
         // display:inline-block;
         width: 25%;
-        left: 1rem;
+        left: -3%;
         top: -5%;
         transform: rotateY(180deg);
         z-index: 100;
@@ -231,11 +232,11 @@
     }
 
     .sctn-3_flowers{
-        transform: rotateY(-180deg);
-        z-index: 10;
+        transform: rotateY(-180deg) rotateZ(-15deg);
+        z-index: 100;
         width: 45%;
-        bottom: 0;
-        left: -10%;
+        bottom: 25%;
+        left: -15%;
 
 
         .sctn-2_flwr2{
